--- a/app.css
+++ b/app.css
@@ -12,7 +12,7 @@
 #second {
     position: absolute;
     background: black;
-    border-radius: 10px;
+    border-radius: 50%;
     transform-origin: bottom;
 }
 
